2005-04-28 Toady <toady@gscore.org>

	* src/staff.c: improved key signature
	
2005-04-26 Toady <toady@gscore.org>

	* src/draw_key_signature.c, src/include/draw_key_signature.h: added
	* plugins/midi/*: works with simili

2005-04-21 Toady <toady@gscore.org>

	* src/draw_key.c, src/include/draw_key.h: added
	* src/layout-engine.c: support for cairoized clefs
	
2005-04-20 Toady <toady@gscore.org>

	* src/score.c: cleaned and added functions to work with scores better
	
2005-04-19 Toady <toady@gscore.org>

	* src/layout-engine.c, src/include/layout-engine.c: added
	* src/score.c: modified
	
2005-04-18 Toady <toady@gscore.org>

	* src/draw_staff.c, src/include/draw_staff.h: creation to draw a cairo staff
	
2005-04-08 Toady <toady@gscore.org>

	* src/score.c: gets the score widget to draw using cairo instructions
	
2005-04-04 Toady <toady@gscore.org>

	* plugins/abc/import-abc.c, src/score.c: abc plugin can import scores correctly
	
2005-04-03 Toady <toady@gscore.org>

	* src/edit.c: improved measure jumping
	
2005-04-02 Toady <toady@gscore.org>

	* src/score.c: Replace "set header" glade widget with custom to make the release in 2005 and stop fighting with glade for MDI stuff
	* src/edit.c: Jump to measure working
	
2005-04-01 Toady <toady@gscore.org>

	* src/key_event.c: Make chord only with notes
	
2005-03-30 Toady <toady@gscore.org>

	* src/beam.c: Fixed bug when the last note selected you want to beam is the last in the list
	
2005-03-27 Toady <toady@gscore.org>

	* plugins/abc/export-abc.c: Improved chords support
	* src/mouse_event.c: Improved objects on staff selection
	* src/objects.c: Improved movements within score to avoid issues with chords
	
2005-03-25 Toady <toady@gscore.org>

	* src/objects_callbacks.c: Sets/Uset stuff on objects selected
	* src/staff.c, src/score.c: Make dialog boxes work using gobjects
	* plugins/abc/export-abc.c: Chords support
	
2005-03-24 Toady <toady@gscore.org>

	* src/objects.c, src/key_event.c: Full insertiong working
	