@@ -1,0 +1,1 @@
+gboolean draw_time_signature(Score_t *score, Staff_t *staff, cairo_t *cr, gboolean selected);
